fix(styles): reset default ul/ol spacing

--- a/client/src/scss/base/_reset.scss
+++ b/client/src/scss/base/_reset.scss
@@ -19,9 +19,10 @@ dd {
   margin: 0;
 }
 
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
